added some slayer task and updated slaying monster to use list of names instead of single monster name, needed for variant monster types